// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tabs /> matches snapshot with default props 1`] = `
<div
  className="Flex rowGap4 itemsCenter xsDirectionRow"
>
  <div
    className="FlexItem"
  >
    <div
      className="box paddingY3"
    >
      <a
        className="link hideOutline tapTransition rounding2 accessibilityOutline block fullWidth pointer"
        href="#"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyPress={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        rel=""
        tabIndex={0}
        target={null}
      >
        <div
          className="Flex columnGap0 itemsCenter xsDirectionColumn"
        >
          <div
            className="box paddingX1 paddingY1 relative rounding2 userSelectNone whiteBg"
          >
            <div
              className="Flex rowGap2 itemsCenter justifyCenter xsDirectionRow"
            >
              <div
                className="FlexItem"
              >
                <div
                  className="Text fontSize3 darkGray alignStart noWrap fontWeightBold"
                >
                  News
                </div>
              </div>
            </div>
            <div
              className="absolute box"
              style={
                Object {
                  "bottom": -3,
                  "width": "calc(100% - 8px)",
                }
              }
            >
              <div
                className="box darkGrayBg"
                style={
                  Object {
                    "borderRadius": 1.5,
                    "height": 3,
                    "width": "100%",
                  }
                }
              />
            </div>
          </div>
        </div>
      </a>
    </div>
  </div>
  <div
    className="FlexItem"
  >
    <div
      className="box paddingY3"
    >
      <a
        className="link hideOutline tapTransition rounding2 accessibilityOutline block fullWidth pointer"
        href="#"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyPress={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        rel=""
        tabIndex={0}
        target={null}
      >
        <div
          className="Flex columnGap0 itemsCenter xsDirectionColumn"
        >
          <div
            className="box paddingX1 paddingY1 relative rounding2 userSelectNone whiteBg"
          >
            <div
              className="Flex rowGap2 itemsCenter justifyCenter xsDirectionRow"
            >
              <div
                className="FlexItem"
              >
                <div
                  className="Text fontSize3 darkGray alignStart noWrap fontWeightBold"
                >
                  You
                </div>
              </div>
            </div>
          </div>
        </div>
      </a>
    </div>
  </div>
</div>
`;

exports[`<Tabs /> matches snapshot with dot indicators 1`] = `
<div
  className="Flex rowGap4 itemsCenter xsDirectionRow"
>
  <div
    className="FlexItem"
  >
    <div
      className="box paddingY3"
    >
      <a
        className="link hideOutline tapTransition rounding2 accessibilityOutline block fullWidth pointer"
        href="#"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyPress={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        rel=""
        tabIndex={0}
        target={null}
      >
        <div
          className="Flex columnGap0 itemsCenter xsDirectionColumn"
        >
          <div
            className="box paddingX1 paddingY1 relative rounding2 userSelectNone whiteBg"
          >
            <div
              className="Flex rowGap2 itemsCenter justifyCenter xsDirectionRow"
            >
              <div
                className="FlexItem"
              >
                <div
                  className="Text fontSize3 darkGray alignStart noWrap fontWeightBold"
                >
                  News
                </div>
              </div>
              <div
                className="FlexItem"
              >
                <div
                  className="box circle redBg"
                  style={
                    Object {
                      "height": 6,
                      "marginTop": "1px",
                      "width": 6,
                    }
                  }
                />
              </div>
            </div>
            <div
              className="absolute box"
              style={
                Object {
                  "bottom": -3,
                  "width": "calc(100% - 8px)",
                }
              }
            >
              <div
                className="box darkGrayBg"
                style={
                  Object {
                    "borderRadius": 1.5,
                    "height": 3,
                    "width": "100%",
                  }
                }
              />
            </div>
          </div>
        </div>
      </a>
    </div>
  </div>
  <div
    className="FlexItem"
  >
    <div
      className="box paddingY3"
    >
      <a
        className="link hideOutline tapTransition rounding2 accessibilityOutline block fullWidth pointer"
        href="#"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyPress={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        rel=""
        tabIndex={0}
        target={null}
      >
        <div
          className="Flex columnGap0 itemsCenter xsDirectionColumn"
        >
          <div
            className="box paddingX1 paddingY1 relative rounding2 userSelectNone whiteBg"
          >
            <div
              className="Flex rowGap2 itemsCenter justifyCenter xsDirectionRow"
            >
              <div
                className="FlexItem"
              >
                <div
                  className="Text fontSize3 darkGray alignStart noWrap fontWeightBold"
                >
                  You
                </div>
              </div>
              <div
                className="FlexItem"
              >
                <div
                  className="box circle redBg"
                  style={
                    Object {
                      "height": 6,
                      "marginTop": "1px",
                      "width": 6,
                    }
                  }
                />
              </div>
            </div>
          </div>
        </div>
      </a>
    </div>
  </div>
</div>
`;

exports[`<Tabs /> matches snapshot with wrap 1`] = `
<div
  className="Flex rowGap4 flexWrap itemsCenter xsDirectionRow"
>
  <div
    className="FlexItem"
  >
    <div
      className="box paddingY3"
    >
      <a
        className="link hideOutline tapTransition rounding2 accessibilityOutline block fullWidth pointer"
        href="#"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyPress={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        rel=""
        tabIndex={0}
        target={null}
      >
        <div
          className="Flex columnGap0 itemsCenter xsDirectionColumn"
        >
          <div
            className="box paddingX1 paddingY1 relative rounding2 userSelectNone whiteBg"
          >
            <div
              className="Flex rowGap2 itemsCenter justifyCenter xsDirectionRow"
            >
              <div
                className="FlexItem"
              >
                <div
                  className="Text fontSize3 darkGray alignStart noWrap fontWeightBold"
                >
                  News
                </div>
              </div>
            </div>
            <div
              className="absolute box"
              style={
                Object {
                  "bottom": -3,
                  "width": "calc(100% - 8px)",
                }
              }
            >
              <div
                className="box darkGrayBg"
                style={
                  Object {
                    "borderRadius": 1.5,
                    "height": 3,
                    "width": "100%",
                  }
                }
              />
            </div>
          </div>
        </div>
      </a>
    </div>
  </div>
  <div
    className="FlexItem"
  >
    <div
      className="box paddingY3"
    >
      <a
        className="link hideOutline tapTransition rounding2 accessibilityOutline block fullWidth pointer"
        href="#"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyPress={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        rel=""
        tabIndex={0}
        target={null}
      >
        <div
          className="Flex columnGap0 itemsCenter xsDirectionColumn"
        >
          <div
            className="box paddingX1 paddingY1 relative rounding2 userSelectNone whiteBg"
          >
            <div
              className="Flex rowGap2 itemsCenter justifyCenter xsDirectionRow"
            >
              <div
                className="FlexItem"
              >
                <div
                  className="Text fontSize3 darkGray alignStart noWrap fontWeightBold"
                >
                  You
                </div>
              </div>
            </div>
          </div>
        </div>
      </a>
    </div>
  </div>
</div>
`;
